revert(ui): prevent overflow on tablet view

--- a/packages/ui/src/Table/BaseTable.css
+++ b/packages/ui/src/Table/BaseTable.css
@@ -5,6 +5,7 @@ button {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+  table-layout: fixed;
   width: 100%;
 }
 
